--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "better-scroll": "^2.0.0-beta.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.0.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
