--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "better-scroll": "^2.0.0-beta.10",
+    "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-activation": "^0.5.4",
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
     "react-router": "^5.2.0",
